add recovery bin
添加了回收站功能，同时优化了后台业务逻辑，提高代码复用性。

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -51,7 +51,7 @@
                 <div class="sidebar-icon">
                     <a href="#photosGroup">
                         <svg t="1581776751896" class="icon" viewBox="0 0 1024 1024" version="1.1"
-                            xmlns="http://www.w3.org/2000/svg" p-id="3295" width="30" height="35">
+                            xmlns="http://www.w3.org/2000/svg" p-id="3295" width="30" height="30">
                             <path
                                 d="M784 112H240C152 112 80 184 80 272v480c0 88 72 160 160 160h544c88 0 160-72 160-160V272c0-88-72-160-160-160z m96 640c0 52.8-43.2 96-96 96H240c-52.8 0-96-43.2-96-96V272c0-52.8 43.2-96 96-96h544c52.8 0 96 43.2 96 96v480z"
                                 fill="#4A576A" p-id="3296"></path>
@@ -65,12 +65,29 @@
                 <div class="sidebar-icon">
                     <a href="#albumsGroup">
                         <svg t="1581776502182" class="icon" viewBox="0 0 1024 1024" version="1.1"
-                            xmlns="http://www.w3.org/2000/svg" p-id="1661" width="30" height="35">
+                            xmlns="http://www.w3.org/2000/svg" p-id="1661" width="30" height="30">
                             <path
                                 d="M276 981.333333H181.333333a53.393333 53.393333 0 0 1-53.333333-53.333333V181.333333a53.393333 53.393333 0 0 1 53.333333-53.333333h746.666667a53.393333 53.393333 0 0 1 53.333333 53.333333v746.666667a53.393333 53.393333 0 0 1-53.333333 53.333333H276z m51.5-42.666666H928a10.666667 10.666667 0 0 0 10.666667-10.666667v-215.166667l-185.126667-185.12a10.666667 10.666667 0 0 0-15.08 0zM170.666667 840.833333V928a10.666667 10.666667 0 0 0 10.666666 10.666667h85.833334l192.666666-192.666667-89.626666-89.62a10.666667 10.666667 0 0 0-15.08 0zM181.333333 170.666667a10.666667 10.666667 0 0 0-10.666666 10.666666v599.166667l154.286666-154.293333a53.333333 53.333333 0 0 1 75.426667 0L490 715.833333l218.286667-218.293333a53.333333 53.333333 0 0 1 75.426666 0L938.666667 652.5V181.333333a10.666667 10.666667 0 0 0-10.666667-10.666666zM64 682.666667a21.333333 21.333333 0 0 1-21.333333-21.333334V96a53.393333 53.393333 0 0 1 53.333333-53.333333h565.333333a21.333333 21.333333 0 0 1 0 42.666666H96a10.666667 10.666667 0 0 0-10.666667 10.666667v565.333333a21.333333 21.333333 0 0 1-21.333333 21.333334z m298.666667-213.333334c-58.813333 0-106.666667-47.853333-106.666667-106.666666s47.853333-106.666667 106.666667-106.666667 106.666667 47.853333 106.666666 106.666667-47.853333 106.666667-106.666666 106.666666z m0-170.666666a64 64 0 1 0 64 64 64.073333 64.073333 0 0 0-64-64z"
                                 fill="#5C5C66" p-id="1662"></path>
                         </svg>
                         <div style="font-size: 14px;">相册</div>
+                    </a>
+                </div>
+                <div class="sidebar-icon">
+                    <a href="#recycleGroup">
+                        <svg t="1582468302724" class="icon" viewBox="0 0 1024 1024" version="1.1"
+                            xmlns="http://www.w3.org/2000/svg" p-id="2679" width="35" height="35">
+                            <path
+                                d="M405.333333 170.666667h213.333334a21.333333 21.333333 0 0 0 0-42.666667H405.333333a21.333333 21.333333 0 0 0 0 42.666667zM448 725.333333a21.333333 21.333333 0 0 0 21.333333-21.333333V448a21.333333 21.333333 0 0 0-42.666666 0v256a21.333333 21.333333 0 0 0 21.333333 21.333333z"
+                                fill="#646464" p-id="2680"></path>
+                            <path
+                                d="M832 256H192a21.333333 21.333333 0 0 0 0 42.666667h64v576a21.333333 21.333333 0 0 0 21.333333 21.333333h469.333334a21.333333 21.333333 0 0 0 21.333333-21.333333V298.666667h64a21.333333 21.333333 0 0 0 0-42.666667z m-106.666667 597.333333H298.666667V298.666667h426.666666z"
+                                fill="#646464" p-id="2681"></path>
+                            <path
+                                d="M576 725.333333a21.333333 21.333333 0 0 0 21.333333-21.333333V448a21.333333 21.333333 0 0 0-42.666666 0v256a21.333333 21.333333 0 0 0 21.333333 21.333333z"
+                                fill="#646464" p-id="2682"></path>
+                        </svg>
+                        <div style="font-size: 14px;">回收站</div>
                     </a>
                 </div>
             </nav>
@@ -242,11 +259,74 @@
                         </div>
                     </div>
                 </div>
+                <div class="content-container layer-photos" id="recycleGroup">
+                    <div class="content-header">
+                        <div class="turnBack">
+                            <a href="#albumsGroup">
+                                <svg t="1582376578104" class="icon" viewBox="0 0 1024 1024" version="1.1"
+                                    xmlns="http://www.w3.org/2000/svg" p-id="1905" width="25" height="25">
+                                    <path
+                                        d="M186.680027 563.559593l328.1052-328.105199a77.326288 77.326288 0 1 0-109.35374-109.353739L22.660414 508.871728a77.326288 77.326288 0 0 0 0 109.35374l382.748083 382.681111a77.281307 77.281307 0 0 0 109.353739 0 77.371269 77.371269 0 0 0 0-109.353739L186.681027 563.559593z"
+                                        fill="#515151" p-id="1906"></path>
+                                    <path
+                                        d="M672.845361 563.559593l328.083209-328.105199a77.326288 77.326288 0 1 0-109.353739-109.353739L508.804757 508.871728a77.326288 77.326288 0 0 0 0 109.35374L891.55284 1000.906579a77.326288 77.326288 0 1 0 109.353739-109.353739l-328.061218-327.993247z"
+                                        fill="#515151" p-id="1907"></path>
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="content-title" style="text-align: center;">回收站</div>
+                    </div>
+                    <div class="content">
+                        <div class="photosGroup" v-for="(pGroup, pgindex) in photosData" data-day="">
+                            <div class="title">
+                                <div class="day" style="margin-left:10px;">{{pGroup.day}}</div>
+                            </div>
+                            <div class="photos">
+                                <div class="img" v-for="(photo,imgindex) in pGroup.photos" v-bind:id="photo.id"
+                                    v-bind:data-id="photo.id">
+                                    <div class="delete" v-bind:data-id="photo.id" v-bind:data-imgindex="imgindex"
+                                        v-bind:data-pgindex="pgindex" onclick="deletePhotoAbsolutly(this)">
+                                        <svg t="1581844816312" class="icon" viewBox="0 0 1024 1024" version="1.1"
+                                            xmlns="http://www.w3.org/2000/svg" p-id="23515" width="35" height="35">
+                                            <path
+                                                d="M221.467345 252.510275h581.273652v581.273652c0 34.168057-27.917803 62.294201-62.294201 62.294201H283.761546c-34.168057 0-62.294201-27.917803-62.294201-62.294201v-581.273652z"
+                                                fill="#FFB74D" p-id="23516"></path>
+                                            <path
+                                                d="M449.809969 356.264496c0-11.4588-9.375381-20.834181-20.834181-20.834181s-20.834181 9.375381-20.834181 20.834181v435.851069c0 11.4588 9.375381 20.834181 20.834181 20.834181s20.834181-9.375381 20.834181-20.834181V356.264496zM615.858393 356.264496c0-11.4588-9.375381-20.834181-20.834181-20.834181s-20.834181 9.375381-20.834181 20.834181v435.851069c0 11.4588 9.375381 20.834181 20.834181 20.834181s20.834181-9.375381 20.834181-20.834181V356.264496z"
+                                                fill="#FB8C00" p-id="23517"></path>
+                                            <path
+                                                d="M194.591251 211.258596c-10.208749 0-18.750763 9.375381-18.750763 20.834181s8.333672 20.834181 18.750763 20.834181H829.200407c10.208749 0 18.750763-9.375381 18.750763-20.834181s-8.333672-20.834181-18.750763-20.834181H194.591251z"
+                                                fill="#FB8C00" p-id="23518"></path>
+                                            <path
+                                                d="M449.809969 176.04883c-11.4588 0-20.834181 9.375381-20.834181 20.834181s9.375381 20.834181 20.834181 20.834181h124.588403c11.4588 0 20.834181-9.375381 20.834181-20.834181s-9.375381-20.834181-20.834181-20.834181h-124.588403z"
+                                                fill="#EF6C00" p-id="23519"></path>
+                                        </svg>
+                                    </div>
+                                    <div class="recovery">
+                                        <div class="" v-bind:data-id="photo.id" v-bind:data-imgindex="imgindex"
+                                            v-bind:data-pgindex="pgindex" onclick="recoverPhoto(this)">
+                                            <svg t="1582470016460" class="icon" viewBox="0 0 1024 1024" version="1.1"
+                                                xmlns="http://www.w3.org/2000/svg" p-id="9560" width="35" height="35"
+                                                data-spm-anchor-id="a313x.7781069.0.i10">
+                                                <path
+                                                    d="M449.810101 104.727273v142.868687c57.793939 0 408.048485-4.525253 408.048485 326.464646 0 178.165657-131.878788 323.620202-306.036364 346.892929 108.476768-21.850505 183.59596-131.490909 183.59596-244.880808 0-216.565657-201.826263-204.024242-285.608081-204.024242v163.29697L164.20202 370.036364 449.810101 104.727273zM164.20202 370.036364"
+                                                    p-id="9561" data-spm-anchor-id="a313x.7781069.0.i11"
+                                                    class="selected" fill="#3cbef9"></path>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <img v-bind:src="photo.prepath" v-bind:layer-src="photo.path"
+                                        v-bind:alt="photo.date">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- 原图显示 -->
                 <!-- 两个提示框 -->
                 <!-- 上传图片到相册 -->
                 <input type="text" id="selected" style="display: none;">
-                <div class="card text-white mb-3 model" id="selectModel" >
+                <div class="card text-white mb-3 model" id="selectModel">
                     <div class="card-header">
                         <div class="text-dark">上传到相册</div>
                         <div style="width:25px;height:25px;cursor: pointer;" onclick="hideSelect()">
@@ -324,6 +404,19 @@
                         </div>
                         <div class="toast-body">
                             删除{{successful?"成功":"失败"}}
+                        </div>
+                    </div>
+                    <div class="toast fade hide" id="toastRecovery" role="alert" data-delay="5000" style="width: 300px;"
+                        aria-live="assertive" aria-atomic="true">
+                        <div class="toast-header">
+                            <strong class="mr-auto"> 恢复{{successful?"成功":"失败"}}</strong>
+                            <small class="text-muted">刚刚</small>
+                            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="toast-body">
+                            恢复{{successful?"成功":"失败"}}
                         </div>
                     </div>
                 </div>
