--- a/src/main/webapp/framework.html
+++ b/src/main/webapp/framework.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/popper.min.js" ></script>
-    <script src="js/bootstrap.min.js" ></script>
+
     <title>Document</title>
 </head>
 <body>
-    
 
 
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/jquery.cookie.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/vue.min.js"></script>
+<script src="js/layui.js"></script>
 </body>
 </html>
